RESOLVED FIXED126753
DOMWindow::showModalDialog should use std::function
https://bugs.webkit.org/show_bug.cgi?id=126753
Summary DOMWindow::showModalDialog should use std::function
Anders Carlsson
Reported 2014-01-10 08:51:04 PST
DOMWindow::showModalDialog should use std::function
Attachments
Patch (7.42 KB, patch)
2014-01-10 08:52 PST, Anders Carlsson
koivisto: review+
Anders Carlsson
Comment 1 2014-01-10 08:52:04 PST
WebKit Commit Bot
Comment 2 2014-01-10 08:54:27 PST
Attachment 220847 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/bindings/js/JSDOMWindowCustom.cpp', u'Source/WebCore/page/DOMWindow.cpp', u'Source/WebCore/page/DOMWindow.h', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/page/DOMWindow.h:165: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/page/DOMWindow.h:445: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/page/DOMWindow.cpp:2015: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/page/DOMWindow.cpp:2122: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 4 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2014-01-10 09:03:54 PST
Note You need to log in before you can comment on or make changes to this bug.