DOMWindow::showModalDialog should use std::function https://bugs.webkit.org/show_bug.cgi?id=126753

Reviewed by Antti Koivisto.

* bindings/js/JSDOMWindowCustom.cpp:
(WebCore::DialogHandler::dialogCreated):
(WebCore::JSDOMWindow::showModalDialog):
* page/DOMWindow.cpp:
(WebCore::DOMWindow::createWindow):
(WebCore::DOMWindow::showModalDialog):
* page/DOMWindow.h:

Canonical link: https://commits.webkit.org/144649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161639 268f45cc-cd09-0410-ab3c-d52691b4dbfc